[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
askama = "0.12.1"
chrono = { version = "0.4.39", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
